<resources>
    <string name="app_name" translatable="false">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I’m a button</string>

    <string name="loginButtonText">Login</string>
    <string name="loginEmailText" translatable="false">login email</string>
    <string name="loginPasswordText">password</string>

    <string name="switchBtnText">What does this do?</string>

    <string name="preference_name" translatable="false">my_shared_preferences</string>
    <string name="preference_key_profile_email" translatable="false">DefaultEmail</string>

    <string name="dialog_message">Are you sure you want to exit the activity?</string>
    <string name="dialog_title" translatable="false">Exit the screen</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="ChatBtnText">Start Chat</string>
    <string name="sendBtnText">Send</string>
    <string name="title_activity_test_toolbar" translatable="false">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="toolbar_activity_btn_text">Test Toolbar</string>

    <string name="message_box_hint">New message</string>

    <string name="weather_forecast_activity_btn_text">Test Weather Forecast</string>

    <string-array name="cities_list">
        <item>Ottawa</item>
        <item>Toronto</item>
        <item>Halifax</item>
        <item>Vancouver</item>
        <item>Quebec</item>
        <item>Calgary</item>
        <item>Winnipeg</item>
        <item>Charlottetown</item>
        <item>Montreal</item>
        <item>Victoria</item>
        <item>Saskatoon</item>
    </string-array>

    <string name="delete_message" translatable="false">Delete this message</string>

</resources>